Thu Dec  6 18:39:21 GMT 2012  Lee Noar <leenoar@sky.com>

	* Makefile.am: Compile files sys/brk.c, sys/stackalloc.c and
	debug/dvsprintf.c with -fno-optimize-sibling-calls to suppress
	tail call optimisations. Although the compiler has been altered
	to prevent such optimisations, this is only when stack checking
	is enabled. These files must be compiled with stack checking
	disabled, which means that tail call optimisations are still
	being applied. Fixes a crash in Mono when compiled with 4.1.2.

Sun Dec  2 02:41:21 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* incl-local/pthread.h (struct __pthread_thread): Move warning.
	* incl-local/internal/asm_dec.s (__PTHREAD_ERRBUF_VALID_OFFSET): Add.
	* incl-local/errno.h (__set_errno): Remove __UNIXLIB_ERRNO_THREADED
	test.
	(__ul_errbuf): Remove valid field.
	* unix/seterr.c (errno): Remove __UNIXLIB_ERRNO_THREADED test.
	* signal/_signal.s (__h_error): Set
	__pthread_running_thread->errbuf_valid i.s.o. __ul_errbuf.valid.
	(__ul_errbuf_valid): Remove.
	* signal/post.c (post_signal): Don't reset __ul_errbuf.valid.  Test
	on signo being SIGOSERROR and __pthread_running_thread->errbuf_valid
	before outputing RISC OS error buffer.
	* pthread/exit.c: Fix header comments.
	* pthread/cond.c: Likewise.
	* pthread/cleanupcall.c: Likewise.
	* pthread/context.c: Likewise.
	* pthread/_yield.s: Likewise.
	* pthread/testcancel.c: Likewise.
	* pthread/cleanup.c: Likewise.
	* pthread/lock.c: Likewise.
	* pthread/detach.c: Likewise.
	* pthread/key.c: Likewise.
	* pthread/self.c: Likewise.
	* pthread/pthsignal.c: Likewise.
	* pthread/rwlockattr.c: Likewise.
	* pthread/join.c: Likewise.
	* pthread/mutex.c: Likewise.
	* pthread/keydest.c: Likewise.
	* pthread/attr.c: Likewise.
	* pthread/condattr.c: Likewise.
	* pthread/pthinit.c: Likewise.
	* pthread/once.c: Likewise.
	* pthread/cancel.c: Likewise.
	* pthread/atfork.c: Likewise.
	* pthread/error.c: Likewise.
	* pthread/_ints.s: Likewise.
	* pthread/mutexattr.c: Likewise.